auth & guard backend methods, frontend with token auth

--- a/backend/package.json
+++ b/backend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "challenge",
+  "name": "backend",
   "version": "0.0.1",
   "description": "",
   "author": "",
@@ -23,9 +23,14 @@
   "dependencies": {
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/jwt": "^10.2.0",
+    "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^10.0.0",
+    "@types/bcryptjs": "^2.4.6",
+    "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "dotenv": "^16.3.1",
     "json-server": "^0.17.4",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
