--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,5 +13,8 @@
   },
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "ts-node": "^10.9.2"
+  }
 }
